# agentic-ai-academy

./: .gitignore  README.md
exercice1/: README.md  qna_bot.py
exercice2/: .dockerignore  .env.example  .gitignore  Dockerfile  QnA-Bot-Azure.pptx  README.md  foundations-recap.md  pyproject.toml
exercice2/app/: config.py  kb.py  llm.py  main.py
exercice3/: .env.example  .gitignore  app.py  apuntes-exercice3-rag.md  bench.py  check_db.py  config.py  db.py  dia2-rag-bot-arranque.md  embeddings.py  ingest.py  llm.py  pyproject.toml  questions.yaml  retrieval.py
exercice4/: .gitignore  00-kickoff-prompt.md  01-vibe-vs-agentic.md  02-own-your-skills-stack.md  03-one-sentence-kickoff.md  04-grill-out-the-ambiguity.md  05-conversation-to-prd.md  06-deep-modules-by-design.md  07-vertical-slices-to-issues.md  08-tdd-a-deep-module.md  09-context-is-alignment.md  CONTEXT.md  README.md  project.md  pyproject.toml
exercice4/app/: ingest.py  main.py  profiler.py  report.py  store.py
exercice4/app/static/: app.css  app.js
exercice4/app/templates/: base.html  index.html  report.html
exercice4/tests/: test_ingest.py  test_profiler.py  test_store.py  test_web.py
