[project]
name = "azure-qna-bot"
version = "1.0.0"
description = "Dataroots QnA bot on Azure (Blob Storage + Azure OpenAI + Container Apps)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "azure-storage-blob>=12.20",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
