[project]
name = "data-quality-checker"
version = "0.1.0"
description = "Web app que perfila un CSV subido manualmente y devuelve un informe de calidad de datos"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.2",            # motor de perfilado (inferencia de tipo, faltantes, duplicados, outliers)
    "jinja2>=3.1",            # render del informe HTML
    "python-multipart>=0.0.9", # subida de fichero (multipart/form-data)
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",           # TestClient de FastAPI
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
